--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
 }
 .Trailhead
 { 
-	background: #1C6EA4;
+	background: #9900E6;
 }
 .icon-bar a:hover {
 	transform: translateX(0);
